20050226
	Initial commit
	sbin/{rc,runscript,functions.sh} still need a lot of work
	etc/inittab still needs a lot of work too
	need to add default init scripts for the stuff that comes with regular
		baselayout
	I'll hopefully get to the other stuff soon, I mostly just want to
		commit so people can see what I'm up to
	This isn't useful yet, don't even try it