@@ -1,7 +1,10 @@
 # default ram disk as root
 
 #/dev/ram0		/		cramfs 		defaults 	0 0
-#none			/proc		proc		defaults  	0 0
+#/dev/ubda		/		ext2		defaults	0 0
+#/dev/mtdblock1		/		jffs2		defaults	0 0
+#/dev/nfs		/		nfs		defaults	0 0
+none			/proc		proc		defaults  	0 0
 
 # glibc 2.2 and above expects tmpfs to be mounted at /dev/shm for
 # POSIX shared memory (shm_open, shm_unlink). 
@@ -9,4 +12,4 @@
 #  use almost no memory if not populated with files)
 # Adding the following line to /etc/fstab should take care of this:
 
-#none			/dev/shm	tmpfs		defaults	0 0
+none			/dev/shm	tmpfs		defaults	0 0
