@@ -1,6 +1,7 @@
 # /etc/inittab
 #
 # Copyright (C) 2001 Erik Andersen <andersen@codepoet.org>
+# Edited lightly by Brian Jackson <iggy@gentoo.org> for baselayout-lite
 #
 # Note: BusyBox init doesn't support runlevels.  The runlevels field is
 # completely ignored by BusyBox init. If you want runlevels, use
@@ -13,40 +14,23 @@
 # action    == one of sysinit, respawn, askfirst, wait, and once
 # process   == program to run
 
-# Startup the system
-null::sysinit:/bin/mount -o remount,rw /
-null::sysinit:/bin/mount -t proc proc /proc
-null::sysinit:/bin/mount -a
-null::sysinit:/bin/hostname -F /etc/hostname
-null::sysinit:/sbin/ifconfig lo 127.0.0.1 up
-null::sysinit:/sbin/route add -net 127.0.0.0 netmask 255.0.0.0 lo
+# Temp stuff
+#::sysinit:/bin/sh
+::sysinit:/sbin/devfsd /dev
+
 # now run any rc scripts
-::sysinit:/etc/init.d/rcS
+::sysinit:/sbin/rc sysinit
 
 # Set up 4 getty's, uncomment below if you need more
 tty1::respawn:/sbin/getty 38400 tty1
 tty2::respawn:/sbin/getty 38400 tty2
-tty3::respawn:/sbin/getty 38400 tty2
-tty4::respawn:/sbin/getty 38400 tty2
+#tty3::respawn:/sbin/getty 38400 tty2
+#tty4::respawn:/sbin/getty 38400 tty2
 #tty5::respawn:/sbin/getty 38400 tty2
 #tty6::respawn:/sbin/getty 38400 tty2
 
 # Put a getty on the serial port
 ttyS0::respawn:/sbin/getty -L ttyS0 115200 vt100
 
-# Logging junk
-null::sysinit:/bin/touch /var/log/messages
-null::respawn:/sbin/syslogd -n -m 0
-null::respawn:/sbin/klogd -n
-#tty9::respawn:/bin/tail -f /var/log/messages
-
 # Stuff to do for the 3-finger salute
 ::ctrlaltdel:/sbin/reboot
-
-# Stuff to do before rebooting
-null::shutdown:/etc/init.d/rcK
-null::shutdown:/bin/killall klogd
-null::shutdown:/bin/killall syslogd
-null::shutdown:/bin/umount -a -r
-null::shutdown:/sbin/swapoff -a
-
