@@ -1,3 +1,9 @@
+20050227
+	Some small changes
+	added devfsd.conf
+	some fixes to the source files from solar
+	some inittab work (still needs more)
+
 20050226
 	Initial commit
 	sbin/{rc,runscript,functions.sh} still need a lot of work
